# kitchensink

./: .gitignore  CMakeLists.txt  KitchenSink-CS.files  KitchenSink-CS.includes  KitchenSink-CS4.files  KitchenSink-Cs1.files  KitchenSink-Cs1.includes  KitchenSink-Cs1.pro  KitchenSink-Cs4.includes  KitchenSink.pro  LICENSE  Makefile.am  README.md  aboutcs.cpp  aboutcs.h  analogclock.cpp  analogclock.h  animated_tiles.cpp  animated_tiles.h  calendar.cpp  calendar.h  colorpicker.cpp  colorpicker.h  colorpicker.ui  configure.ac  dialogs.cpp  dialogs.h  do-lupdate  do_lupdate  draglabel.cpp  draglabel.h  dragwidget.cpp  dragwidget.h  draw.cpp  draw.h  draw_area.cpp  draw_area.h  fontpicker.cpp  fontpicker.h  fontpicker.ui  (+87 more)
.github/workflows/: main.yml
forms/: camera.ui  camera_imagesettings.ui  camera_videosettings.ui  chat_dialog.ui  colorpicker.ui  dialogs.ui  fontpicker.ui  html_viewer.ui  international.ui  line_edit.ui  listview.ui  mainwindow.ui  mdi.ui  mdi_old.ui  musicplayer.ui  script.ui  ssl_cert.ui  ssl_client.ui  ssl_error.ui  stdpath.ui  style_dw.ui  style_edit.ui  tabdialog.ui  tablewidget_view.ui  xml.ui  xmlpatterns.ui
install/: KitchenSink-Cs1.ci
install_files/: cs.conf
install_win/: KitchenSink-CS.ci  KitchenSink-Cs1.ci  KitchenSink-Cs4.ci
install_x11/: ks_cs1.spec
qss/: shiny.qss
resources/: Info.plist  coffee.qss  ks.icns  ks_de.qm  ks_de.ts  ks_en.qm  ks_en.ts  ks_fr.qm  ks_fr.ts  pagefold.qss  qt_de.qm  qt_de.ts  qt_en.qm  qt_en.ts  qt_fr.qm  qt_fr.ts  sampleMenu.xml  script.js  shiny.qss  words.txt
resources_qml/wiggle_boxes/: Wiggle_Boxes.qml
resources_qml/world_clock/: World_Clock.qml
src/: CMakeLists.txt  aboutcs.cpp  aboutcs.h  analogclock.cpp  analogclock.h  animated_tiles.cpp  animated_tiles.h  calendar.cpp  calendar.h  colorpicker.cpp  colorpicker.h  dialogs.cpp  dialogs.h  draglabel.cpp  draglabel.h  draw.cpp  draw.h  draw_area.cpp  draw_area.h  fontpicker.cpp  fontpicker.h  fridgemag.cpp  fridgemag.h  glwidget.cpp  glwidget.h  grabber.cpp  grabber.h  html_viewer.cpp  html_viewer.h  include_test.cpp  international.cpp  international.h  international.h.KS6092  ks_build_info.h.in  lighting.cpp  lighting.h  line_edit.cpp  line_edit.h  listview.cpp  listview.h  (+59 more)
src/audio/: audio.cmake  html_viewer.cpp  html_viewer.h  musicplayer.cpp  musicplayer.h  videoplayer.cpp  videoplayer.h  videoplayer.h.UN6092  videosurface.cpp  videosurface.h  videowidget.cpp  videowidget.h  volumebutton.cpp  volumebutton.h  web_browser.cpp  web_browser.h
src/camera/: camera.cmake  camera.cpp  camera.h  imagesettings.cpp  imagesettings.h  videosettings.cpp  videosettings.h
src/graphics/: analogclock.cpp  analogclock.h  animated_tiles.cpp  animated_tiles.h  draglabel.cpp  draglabel.h  fridgemag.cpp  fridgemag.h  glwidget.cpp  glwidget.h  grabber.cpp  grabber.h  graphics.cmake  lighting.cpp  lighting.h  mandelbrot_thread.cpp  mandelbrot_thread.h  mandelbrot_widget.cpp  mandelbrot_widget.h  qmlapplicationviewer.cpp  qmlapplicationviewer.h  screenshot.cpp  screenshot.h  wiggle_boxes.cpp  wiggle_boxes.h  world_clock.cpp  world_clock.h
src/network/: chat_dialog.cpp  chat_dialog.h  client.cpp  client.h  connection.cpp  connection.h  network.cmake  peermanager.cpp  peermanager.h  server.cpp  server.h  ssl_cert.cpp  ssl_cert.h  ssl_client.cpp  ssl_client.h
src/views/: listview.cpp  listview.h  tableview.cpp  tableview.h  tablewidget_view.cpp  tablewidget_view.h  treeview.cpp  treeview.h  views.cmake
src/widgets/: calendar.cpp  calendar.h  line_edit.cpp  line_edit.h  sliders.cpp  sliders.h  tabdialog.cpp  tabdialog.h  widgets.cmake
translations/: qt_de.ts  qt_fr.ts
